# statewatch

./: .gitignore  .local.dev.env.example  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-request.yml  3-documentation.yml  4-question.yml
.github/instructions/: copilot.instructions.md
.github/workflows/: lint-and-unit-test.yml  release.yml
airflow/: .env.example  .gitignore  Dockerfile  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: price_update_tasks.py  update_daily_prices.py  update_kaggle_datasets.py  update_kaggle_datasets_tasks.py  update_weekday_prices.py
statewatch/: main.py
statewatch/cli/: app.py
statewatch/cli/menus/: __init__.py  asset_manager.py  menu.py  root.py
statewatch/core/: config.py
statewatch/db/: database.py
statewatch/db/models/: __init__.py  asset.py  key.py  price.py
statewatch/dependencies/: auth.py  db.py  services.py
statewatch/errors/: __init__.py  auth.py
statewatch/formats/: __init__.py  csv.py
statewatch/routes/: __init__.py  price.py  root.py  tasks.py
statewatch/schemas/: __init__.py  enums.py  price.py  types.py
statewatch/scrapers/: __init__.py  alphavantage_scraper.py  bpi_scraper.py  cryptocurrency_scraper.py  yfinance_scraper.py
statewatch/services/: __init__.py  asset.py  key.py  orchestrator.py  price.py  service.py  task.py
statewatch/utils/: datetime.py  errors.py
statewatch/wrappers/: alphavantage.py  bpi.py  rest_api.py
tests/unit/: conftest.py
