[project]
name = "statewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.3",
    "psycopg2-binary>=2.9.11",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
