[project]
name = "statewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coingecko-sdk>=1.14.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.3",
    "psycopg2-binary>=2.9.11",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=statewatch tests/ --cov-report html"

[project.scripts]
app = "statewatch.main:app"

[tool.pytest_env]
MODE = "development"
DATABASE_URL = "postgresql+psycopg2://statewatch:password@localhost:5432/statewatch"
TIMEZONE = "UTC"
